--- a/templates/script_create.html.twig
+++ b/templates/script_create.html.twig
@@ -4,7 +4,7 @@
 
 {% block breadcrumbs %}
 {{ bootstrap_breadcrumbs(
-  bootstrap_breadcrumb(bootstrap_icon('exclamation-triangle-fill') ~ ' Scripts', 'script_index'),
+  bootstrap_breadcrumb(bootstrap_icon('code-slash') ~ ' Scripts', 'script_index'),
   bootstrap_breadcrumb('Create'),
 ) }}
 {% endblock %}
