--- a/templates/script_index.html.twig
+++ b/templates/script_index.html.twig
@@ -15,7 +15,7 @@
 {% block actions %}
 {% if can_create_script %}
 <a href="{{ create_script_href }}" class="btn btn-sm btn-primary">
-  {{ bootstrap_icon('plus') }} Add Script</a>
+  {{ bootstrap_icon('plus-lg') }} Add Script</a>
 {% endif %}
 {% endblock %}
 
@@ -50,13 +50,13 @@
             <td>
               {% if is_granted(attributes.edit, script) %}
               <a class="btn btn-sm btn-primary btn-action" href="{{ path('script_edit', {id: script.id}) }}" title="Edit">
-                {{ bootstrap_icon('pen-fill') }}
+                {{ bootstrap_icon('pencil') }}
                 <span class="visually-hidden">Edit</span>
               </a>
               {% endif %}
               {% if is_granted(attributes.delete, script) %}
               <a class="btn btn-sm btn-danger btn-action" href="{{ path('script_delete', {id: script.id}) }}" title="Delete" data-confirm="Are you sure you want to delete this script? Clicking OK will take you to a verification step to delete this entry.">
-                {{ bootstrap_icon('trash-fill') }}
+                {{ bootstrap_icon('trash') }}
                 <span class="visually-hidden">Delete</span>
               </a>
               {% endif %}
