--- a/templates/script_index.html.twig
+++ b/templates/script_index.html.twig
@@ -69,7 +69,7 @@
       route: 'script_edit',
       route_params: {id: script.id},
       color: 'secondary',
-      icon: 'pen',
+      icon: 'pencil',
       text: 'Edit Script',
     }]) %}
   {% endif %}
