table header labels

--- a/templates/script_index.html.twig
+++ b/templates/script_index.html.twig
@@ -40,7 +40,7 @@
               <th>Name</th>
               <th>Shortcode</th>
               <th>Last Updated</th>
-              <th></th>
+              <th aria-label="Row Actions"></th>
             </tr>
           </thead>
           <tbody>
